Fix: make line spacing in lists on job site bigger

--- a/assets/current.css
+++ b/assets/current.css
@@ -2145,3 +2145,7 @@ table.dataTable thead > tr > td.sorting {
 .uploader {
   margin-top: 2em;
 }
+
+li {
+    line-height: 1.5;
+}
